name:                charlotte
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kitdallege/charlotte#readme
license:             BSD3
license-file:        LICENSE
author:              Kit Dallege
maintainer:          kitdallege@gmail.com
copyright:           Copyright: (c) 2016 Kit Dallege
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Charlotte
                       Charlotte.Response
                       Charlotte.Request
                       Charlotte.Types
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , network-transport
                     , exceptions
                     , http-client
                     , http-client-tls
                     , http-types
                     , network-uri
                     , stm
                     , time
                     , text
  ghc-options:         -Wall
  default-language:    Haskell2010

executable charlotte-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , charlotte
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , network-uri
                     , sqlite-simple
                     , time
                     , tagsoup
                     , tagsoup-selection
  default-language:    Haskell2010

test-suite charlotte-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , charlotte
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kitdallege/charlotte
